# wallctl

./: Cargo.toml  README.md
scripts/: install.sh
src/: app.rs  assets.rs  cli.rs  clock.rs  config.rs  heic.rs  launch_agent.rs  lib.rs  main.rs  paths.rs  profile.rs  runner.rs  schedule.rs  storage.rs  wallpaper.rs
