[package]
name = "wallctl"
version = "0.1.0"
edition = "2021"
description = "macOS-first wallpaper collection controller"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
inquire = "0.7"
plist = "1.7"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
